Upd Ref Upd Code to .NET 9

--- a/ArgusLogoManager/appsettings.json
+++ b/ArgusLogoManager/appsettings.json
@@ -1,6 +1,6 @@
 {
     //"DB.ConnectionString" is overwritten via dotnet user-secrets
-    "DB.ConnectionString": "Data Source=XXX.XXX\\SQLEXPRESS,1433;Initial Catalog=ArgusTV;User ID=XXX;Password=XXX;Persist Security Info=True",
+    "DB.ConnectionString": "Data Source=XXX.XXX\\SQLEXPRESS,1433;Initial Catalog=ArgusTV;User ID=XXX;Password=XXX;Persist Security Info=True;TrustServerCertificate=True;",
     "Logos.Source.SVN": "C:\\Temp\\ArgusLogoManager\\SVN",
     "Logos.Target.DIR": "C:\\Temp\\ArgusLogoManager\\TARGET"
 }
