--- a/ArgusLogoManager/appsettings.json
+++ b/ArgusLogoManager/appsettings.json
@@ -1,6 +1,10 @@
 {
     //"DB.ConnectionString" is overwritten via dotnet user-secrets
     "DB.ConnectionString": "Data Source=XXX.XXX\\SQLEXPRESS,1433;Initial Catalog=ArgusTV;User ID=XXX;Password=XXX;Persist Security Info=True;TrustServerCertificate=True;",
+
     "Logos.Source.SVN": "C:\\Temp\\ArgusLogoManager\\SVN",
-    "Logos.Target.DIR": "C:\\Temp\\ArgusLogoManager\\TARGET"
+    "Logos.Source.GIT": "C:\\Temp\\ArgusLogoManager\\GIT",
+    
+    "Logos.Target.SVN": "C:\\Temp\\ArgusLogoManager\\TARGET_SVN",
+    "Logos.Target.GIT": "C:\\Temp\\ArgusLogoManager\\TARGET_GIT"
 }
